--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -9,6 +7,20 @@ services:
       - '3000:3000'
     volumes:
       - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+    depends_on:
+      - backend
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    ports:
+      - '8000:8000'
+    volumes:
+      - ./backend:/app
       - /app/node_modules
     environment:
       - NODE_ENV=development
