--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,10 +1,10 @@
 # Dockerfile.prod
 
-FROM node:20-slim as build
+FROM node:20-alpine as build
 
 WORKDIR /app
 
-COPY package.json pnpm-lock.yaml .
+COPY package.json pnpm-lock.yaml ./
 
 RUN npm install -g pnpm
 
