--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -5,9 +5,14 @@ services:
       dockerfile: Dockerfile.prod
     ports:
       - '80:80'
+    networks:
+      - vite_node_network
   backend:
     build: 
       context: ./backend
       dockerfile: Dockerfile.prod
-    ports:
-      - "8000:8000" 
+    networks:
+      - vite_node_network
+networks:
+  vite_node_network:
+    driver: bridge
