--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,7 +2,9 @@
 
 FROM node:20-alpine
 
-WORKDIR /app
+RUN mkdir -p /app/backend
+
+WORKDIR /app/backend
 
 COPY package.json pnpm-lock.yaml ./
 
@@ -14,4 +16,4 @@ COPY . .
 
 EXPOSE 8000
 
-CMD ["pnpm", "run", "dev"]
+CMD ["pnpm", "run", "start"]
