--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,9 +1,8 @@
-FROM node:20-alpine AS base
+# Dockerfile.prod
 
-FROM base AS builder
+FROM node:20-alpine
 
-RUN apk add --no-cache gcompat
-WORKDIR /app
+WORKDIR /app/backend
 
 COPY package.json pnpm-lock.yaml ./
 
@@ -15,18 +14,4 @@ COPY . .
 
 RUN pnpm run build
 
-# Stage 2
-
-FROM base AS runner
-WORKDIR /app
-
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 hono
-
-COPY --from=builder --chown=hono:nodejs /app/node_modules /app/node_modules
-COPY --from=builder --chown=hono:nodejs /app/dist /app/dist
-COPY --from=builder --chown=hono:nodejs /app/package.json /app/package.json
-
-USER hono
-
-CMD ["node", "/app/dist/index.js"]
+CMD ["node", "dist/main.js"]
