--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,12 +1,13 @@
 services:
   frontend:
+    container_name: frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
     ports:
       - '3000:3000'
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app/frontend
       - /app/node_modules
     environment:
       - NODE_ENV=development
@@ -14,16 +15,30 @@ services:
       - backend
 
   backend:
+    container_name: backend
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
-    ports:
-      - '8000:8000'
+    # ports:
+    #   - '8000:8000'
     volumes:
-      - ./backend:/app
+      - ./backend:/app/backend
       - /app/node_modules
     environment:
       - NODE_ENV=development
+
+  db:
+    image: postgres
+    container_name: database
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres-dev
+    restart: always
+    volumes:
+      - ./postgres-data:/var/lib/postgres/data
+    # ports:
+    #   - '5432:5432'
 
 volumes:
   frontend-volume:
