--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -8,24 +8,30 @@ services:
       - '3000:3000'
     volumes:
       - ./frontend:/app/frontend
-      - /app/node_modules
+      - /app/frontend/node_modules
     environment:
       - NODE_ENV=development
     depends_on:
       - backend
+    networks:
+      - app-network
 
   backend:
     container_name: backend
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
-    # ports:
-    #   - '8000:8000'
+    environment:
+      DATABASE_URL: postgres://postgres:postgres@database:5432/postgres-dev?schema=SCHEMA
+      NODE_ENV: development
+    depends_on:
+      db:
+        condition: service_healthy
     volumes:
       - ./backend:/app/backend
-      - /app/node_modules
-    environment:
-      - NODE_ENV=development
+      - /app/backend/node_modules
+    networks:
+      - app-network
 
   db:
     image: postgres
@@ -37,9 +43,19 @@ services:
     restart: always
     volumes:
       - ./postgres-data:/var/lib/postgres/data
-    # ports:
-    #   - '5432:5432'
+    ports:
+      - '5432:5432'
+    healthcheck:
+      test: ['CMD', 'pg_isready', '-U', 'postgres']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
 
 volumes:
   frontend-volume:
     name: frontend-volume
+
+networks:
+  app-network:
